--- a/SSHLearning/pom.xml
+++ b/SSHLearning/pom.xml
@@ -4,12 +4,19 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.hly</groupId>
-  <artifactId>basicstruts2</artifactId>
+  <groupId>com.javahly</groupId>
+  <artifactId>SSHLearning</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>war</packaging>
+  <modules>
+    <module>ch1</module>
+    <module>ch2</module>
+    <module>ch3</module>
+    <module>ch4</module>
+    <module>ch5</module>
+  </modules>
+  <packaging>pom</packaging>
 
-  <name>basicstruts2 Maven Webapp</name>
+  <name>SSHLearning Maven Webapp</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
@@ -34,11 +41,30 @@
       <version>2.5.1</version>
     </dependency>
 
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.1.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>javax.servlet.jsp</groupId>
+      <artifactId>javax.servlet.jsp-api</artifactId>
+      <version>2.3.1</version>
+    </dependency>
+
+    <!-- 添加jstl支持 -->
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>jstl</artifactId>
+      <version>1.2</version>
+    </dependency>
+
 
   </dependencies>
 
   <build>
-    <finalName>basicstruts2</finalName>
+    <finalName>SSHLearning</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <plugin>
